Updated for graphs
Added a graphical simulation of the current days temperature(00:00 - Now). Simulated up until current point as the weather API only allows for current temperature. Added test for service and model classes.